--- a/S. Bikulcius Thesis/analysis_report.Rmd
+++ b/S. Bikulcius Thesis/analysis_report.Rmd
@@ -1,8 +1,13 @@
 ---
 title: 'S. Bikulcius Thesis: Analysis'
 author: "Micah E. Hirsch"
-date: "2024-03-07"
-output: html_document
+date: "2024-03-14"
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+    code_folding: hide
+    
 ---
 
 ```{r setup, include=FALSE}
@@ -752,10 +757,9 @@ Like with the pupil dilation data, we are using a linear mixed effects (LME) mod
 
 #### Unconditional Model
 
-```{r}
+```{r, warning = F, message = F}
 
 m0 <- glmmTMB(effort_rating ~ 1 + (1|subject) + (1|code), data = accurate_df)
-summary(m0)
 sjPlot::tab_model(m0, pred.labels = c("Intercept"), dv.labels = "Perceived Listening Effort")
 performance::icc(m0)
 
@@ -763,7 +767,7 @@ performance::icc(m0)
 
 #### Model 1
 
-```{r}
+```{r, warning = F, message = F}
 
 m1 <- glmmTMB(effort_rating ~ 1 + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m1, pred.labels = c("Intercept"), dv.labels = "Perceived Listening Effort")
@@ -774,7 +778,7 @@ performance::test_performance(m0, m1)
 
 #### Model 2
 
-```{r}
+```{r, warning = F, message = F}
 
 m2 <- glmmTMB(effort_rating ~ trial_c + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m2, pred.labels = c("Intercept", "Trial Order"), dv.labels = "Perceived Listening Effort")
@@ -784,7 +788,7 @@ performance::test_performance(m1, m2)
 ```
 #### Model 3
 
-```{r}
+```{r, warning = F, message = F}
 
 m3 <- glmmTMB(effort_rating ~ trial_c + speaker + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m3, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]"), dv.labels = "Perceived Listening Effort")
@@ -795,9 +799,9 @@ performance::test_performance(m2, m3)
 
 #### Model 4
 
-Quick Note Here: Working Memory was a significant predictor. However, based on the likelihood ratio test, adding it to the model did not significantly improve model fit, which is why on subsequent steps, we are removing it.
+Quick Note Here: Working Memory was a significant predictor. However, based on the likelihood ratio test, adding it to the model did not significantly improve model fit, which is why on subsequent steps, we are removing it for now. You'll see that it will eventually get added back in because of the significant interaction between working memory and speaker.
 
-```{r}
+```{r, warning = F, message = F}
 
 m4 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(list_sort_c, scale = F) + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m4, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", "Working Memory"), dv.labels = "Perceived Listening Effort")
@@ -807,7 +811,7 @@ performance::test_performance(m3, m4)
 ```
 #### Model 5
 
-```{r}
+```{r, warning = F, message = F}
 
 m5 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(flanker_c, scale = F) + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m5, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", "Inhibitory Control"), dv.labels = "Perceived Listening Effort")
@@ -818,7 +822,7 @@ performance::test_performance(m3, m5)
 
 #### Model 6
 
-```{r}
+```{r, message = F, warning = F}
 
 m6 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(card_sort_c, scale = F) + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m6, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", "Cognitive Flexibility"), dv.labels = "Perceived Listening Effort")
@@ -829,7 +833,7 @@ performance::test_performance(m3, m6)
 
 #### Model 7
 
-```{r}
+```{r, warning = F, message = F}
 
 m7 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(pattern_c, scale = F) + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m7, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", "Processing Speed"), dv.labels = "Perceived Listening Effort")
@@ -839,7 +843,7 @@ performance::test_performance(m3, m7)
 ```
 #### Model 8
 
-```{r}
+```{r, warning = F, message = F}
 
 m8 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(list_sort_c, scale = F)*speaker + (trial_c|subject) + (trial_c|code), data = accurate_df)
 sjPlot::tab_model(m8, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", 
@@ -852,7 +856,7 @@ performance::test_performance(m3, m8)
 
 #### Model 9
 
-```{r}
+```{r, warning = F, message = F}
 
 m9 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(list_sort_c, scale = F)*speaker + 
                 scale(flanker_c, scale = F)*speaker +(trial_c|subject) + (trial_c|code), data = accurate_df)
@@ -867,11 +871,10 @@ performance::test_performance(m8, m9)
 
 #### Model 10
 
-```{r}
+```{r, warning = F, message = F}
 
 m10 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(list_sort_c, scale = F)*speaker + 
                 scale(card_sort_c, scale = F)*speaker + (trial_c|subject) + (trial_c|code), data = accurate_df)
-summary(m10)
 sjPlot::tab_model(m10, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", 
                                       "Working Memory", "Cognitive Flexibility", "Working Memory * Speaker [ALS]",
                                       "Cognitive Flexibility * Speaker [ALS]"), 
@@ -883,11 +886,10 @@ performance::test_performance(m8, m10)
 
 #### Model 11
 
-```{r}
+```{r, warning = F, message = F}
 
 m11 <- glmmTMB(effort_rating ~ trial_c + speaker + scale(list_sort_c, scale = F)*speaker + 
                 scale(card_sort_c, scale = F)*speaker + scale(pattern_c, scale = F)*speaker + (trial_c|subject) + (trial_c|code), data = accurate_df)
-summary(m11)
 sjPlot::tab_model(m11, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", 
                                       "Working Memory", "Cognitive Flexibility", "Processing Speed",
                                       "Working Memory * Speaker [ALS]",
@@ -910,12 +912,20 @@ Based on the analysis, model 10 is the best fitting model to our data. The model
 - The interaction between working memory and speaker is not significant, which indicates that the relationship between working memory and perceived listening effort when listening to the ALS speaker is not significantly different than the relationship for the control speaker, controlling for trial order and cognitive flexibility. However, in the model building steps, it should be noted that this interaction was significant before adding cognitive flexibility into the model. 
 - The significant interaction between cognitive flexibility and speaker indicates that the relationship between cognitive flexibility and speaker is significantly different for the ALS speaker compared to the control speaker. In particular, the results suggest that there is a negative relationship between cognitive flexibility and perceived listening effort for the ALS speaker, controlling for trial order and listener working memory. In other words, listeners with higher cognitive flexibility scores had lower perceived listening effort ratings when they were listening to the speaker with ALS than those with lower cognitive flexibility scores.
 
-```{r}
+```{r, warning = F, message = F}
 
 sjPlot::tab_model(m10, pred.labels = c("Intercept", "Trial Order", "Speaker [ALS]", 
                                       "Working Memory", "Cognitive Flexibility", "Working Memory * Speaker [ALS]",
                                       "Cognitive Flexibility * Speaker [ALS]"), 
-                  dv.labels = "Perceived Listening Effort")
+                  dv.labels = "Perceived Listening Effort",
+                  file = "Tables/perceived_effort_model.html")
+
+```
+
+
+```{r, echo = F, warning = F, message = F}
+
+rm(list = ls())
 
 ```
 
